<resources>
    <string name="app_name">ParentCrew</string>
    <string name="label_title">Parent Crew</string>
    <string name="button_register">Log in</string>
    <string name="exit_message">Press back again to exit</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email"</string>
    <string name="person_name">"Name"</string>
    <string name="kid_name">"Kid Name (optional)"</string>
    <string name="kid_age">"Kid Age"</string>
    <string name="person_location">"Location"</string>
    <string name="looking_for">"Looking For"</string>
    <string name="person_interest">"Interest"</string>
    <string name="already_logged_label">Already a user?</string>
    <string name="login_label">Log In</string>
    <string name="label_username">Email Address</string>
    <string name="label_password">Password</string>
    <string name="label_email_error">Please enter a valid email address</string>
    <string name="label_loggingIn">Logging In</string>
    <string name="label_login">Log In</string>
    <string name="label_create_account">Create Account</string>
    <string name="label_email">What\'s your email?</string>
    <string name="create_password_label">Create a new password</string>
    <string name="facebook_app_id">3919243278711399</string>
    <string name="fb_login_protocol_scheme">fb3919243278711399</string>

</resources>
