<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <!-- Login progress -->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginStart="2dp"
        android:text="@string/create_password_label"
        android:textColor="@color/white"
        android:textSize="18sp"
        fancy:layout_constraintBottom_toTopOf="@+id/loginPassword"
        fancy:layout_constraintLeft_toLeftOf="@+id/loginPassword"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginEnd="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginStart="3dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:inputType="textPassword"
        fancy:layout_constraintBottom_toBottomOf="parent"
        fancy:layout_constraintHorizontal_bias="0.0"
        fancy:layout_constraintLeft_toLeftOf="parent"
        fancy:layout_constraintRight_toRightOf="parent"
        fancy:layout_constraintTop_toTopOf="parent"
        fancy:layout_constraintVertical_bias="0.544"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/createAccountLabel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginRight="105dp"
        android:layout_marginStart="105dp"
        android:gravity="center"
        android:text="@string/label_create_account"
        android:textColor="@color/white"
        android:textSize="25sp"
        fancy:layout_constraintBottom_toTopOf="@+id/labelEmail"
        fancy:layout_constraintLeft_toLeftOf="parent"
        fancy:layout_constraintRight_toRightOf="parent"
        fancy:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginBottom="47dp"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="39dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:inputType="textPersonName"
        fancy:layout_constraintBottom_toTopOf="@+id/textView3"
        fancy:layout_constraintHorizontal_bias="0.0"
        fancy:layout_constraintLeft_toLeftOf="parent"
        fancy:layout_constraintRight_toRightOf="parent"
        fancy:layout_constraintTop_toTopOf="@+id/labelEmail"
        fancy:layout_constraintVertical_bias="0.521"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="137dp"
        android:text="@string/label_email"
        android:textColor="@color/white"
        android:textSize="18sp"
        fancy:layout_constraintLeft_toLeftOf="@+id/loginUsername"
        fancy:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/loginButton"
        android:layout_width="209dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        fancy:fb_defaultColor="@color/white"
        fancy:fb_radius="30dp"
        fancy:fb_text="Next"
        fancy:fb_textColor="@color/black"
        fancy:layout_constraintLeft_toLeftOf="parent"
        fancy:layout_constraintRight_toRightOf="parent"
        fancy:layout_constraintTop_toBottomOf="@+id/loginPassword"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/emailError"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="43dp"
        android:textColor="@color/black"
        android:textSize="12sp"
        fancy:layout_constraintBottom_toBottomOf="@+id/textView3"
        fancy:layout_constraintHorizontal_bias="0.387"
        fancy:layout_constraintLeft_toLeftOf="@+id/loginUsername"
        fancy:layout_constraintRight_toRightOf="@+id/loginUsername"
        fancy:layout_constraintTop_toTopOf="@+id/loginUsername"
        fancy:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/passwordError"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        fancy:layout_constraintBottom_toTopOf="@+id/loginButton"
        fancy:layout_constraintHorizontal_bias="0.0"
        fancy:layout_constraintLeft_toLeftOf="parent"
        fancy:layout_constraintRight_toRightOf="parent"
        fancy:layout_constraintTop_toBottomOf="@+id/loginPassword"
        fancy:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>